--- a/LambdaForums/LambdaForums.csproj
+++ b/LambdaForums/LambdaForums.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\ServiceLayer\ServiceLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\users\" />
+  </ItemGroup>
+
 </Project>
